--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.8",
     "@reduxjs/toolkit": "^1.8.5",
     "@stripe/stripe-js": "^1.38.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,6 +14,7 @@
     "axios": "^1.0.0",
     "cra-template-redux": "2.0.0",
     "firebase": "^9.10.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
